--- a/POE Auto Helper.csproj
+++ b/POE Auto Helper.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
+    <UseWPF>true</UseWPF>
     <RootNamespace>POE_Auto_Helper</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="InputSimulator" Version="1.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Quartz" Version="3.3.3" />
   </ItemGroup>
 
 </Project>
